# pegboard

./: .gitignore  LICENSE  README.md  README_zh.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
channel-adapter/: index.ts  openclaw.plugin.json  package.json
channel-adapter/src/: bot.ts  channel.ts  config.ts  monitor.ts  runtime.ts  send.ts
skill/: SKILL.md
skill/config/: design_system.md  panel_types.json
skill/lib/: ws-helper.mjs
skill/references/: html-sandbox.md  panel-schemas.md  theme-spec.md
skill/scripts/: canvas_control.mjs  canvas_query.mjs  panel_control.mjs  realtime_control.mjs  theme_control.mjs
skill/tools/: canvas_control.mjs  canvas_query.mjs  panel_control.mjs  realtime_control.mjs  theme_control.mjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  fs_ops.rs  lib.rs  ws_server.rs
src/components/canvas/: ArchiveDrawer.tsx  Canvas.tsx  GridLayout.tsx
src/components/chat/: ChatFloatingBar.tsx  ChatInput.tsx  ChatMessage.tsx  ChatWindow.tsx
src/hooks/: useAudioRecorder.ts  useErrorHandler.ts  useFileUpload.ts  usePersistence.ts  useRealtimeSubscription.ts  useSwipeNavigation.ts  useTheme.tsx  useWebSocket.ts
src/i18n/: config.ts
src/lib/: json-patch.ts  panel-icons.tsx  panel-validators.ts  realtime-manager.ts  url-validation.ts  ws-protocol.ts
src/stores/: canvas-store.ts  chat-store.ts  connection-store.ts
src/styles/: globals.css
src/types/: layout.ts  panel-data.ts  panel-protocol.ts  plugin.ts  store.ts  template.ts  websocket.ts
(+58 files in other folders)
