[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["CopperG"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "net", "fs", "io-util"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
